--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ Django==2.0
 django-bower==5.2.0
 django-ckeditor==5.6.1
 django-js-asset==1.1.0
+django-libs==2.0.1
 icalendar==4.0.2
+Pillow==5.2.0
 python-dateutil==2.7.3
 pytz==2018.5
 six==1.11.0
