--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,44 @@
+aioredis==1.1.0
+asgiref==2.3.2
+async-timeout==3.0.1
+attrs==18.2.0
+autobahn==18.9.2
+Automat==0.7.0
+certifi==2018.10.15
+channels==2.1.3
+channels-redis==2.3.0
+chardet==3.0.4
+constantly==15.1.0
+cssselect==1.0.3
+cssutils==1.0.2
+daphne==2.2.2
 Django==2.0
 django-bower==5.2.0
+django-channels==0.7.0
 django-ckeditor==5.6.1
+django-forms-ajaxified==0.2
 django-js-asset==1.1.0
 django-libs==2.0.1
+emails==0.5.15
+hiredis==0.2.0
+hyperlink==18.0.0
 icalendar==4.0.2
+idna==2.7
+incremental==17.5.0
+lxml==4.2.5
+msgpack==0.5.6
+oauthlib==2.1.0
 Pillow==5.2.0
+premailer==3.2.0
+PyHamcrest==1.9.0
+pypiwin32==223
 python-dateutil==2.7.3
 pytz==2018.5
+pywin32==224
+requests==2.19.1
+requests-oauthlib==1.0.0
 six==1.11.0
+Twisted==18.9.0
+txaio==18.8.1
+urllib3==1.23
+zope.interface==4.5.0
